--- a/index.html
+++ b/index.html
@@ -1005,7 +1005,7 @@ varying subject, scene, motion, and camera view while staying aligned with the p
       <pre><code>
 @article{kazimi2025dppgrpo,
         title={Diverse Video Generation with Determinantal Point Process-Guided Policy Optimization},
-        author={Kazimi, Tahira and Dulop, Connor and Yanardag, Pinar},
+        author={Kazimi, Tahira and Dunlop, Connor and Yanardag, Pinar},
         journal={arXiv preprint arXiv:2511.20647},
         year={2025}
 }
