--- a/index.html
+++ b/index.html
@@ -535,7 +535,7 @@
 
     <div class="narrow-description">
   <p>
-    Frame-level examples showing that DPP-GRPO produces diverse videos, varying in appearance,
+    DPP-GRPO produces diverse videos, varying in appearance,
     environment, and camera motion, while remaining faithful to the same input prompt.
   </p>
 </div>
